--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,11 @@
-// Начните писать стили здесь
+@import "font-face.scss";
+@import "variables.scss";
+@import "button.scss";
+@import "blocks/header.scss";
+@import "blocks/page-main.scss";
+@import "blocks/advantages.scss";
+@import "blocks/interest.scss";
+@import "blocks/footer.scss";
+@import "blocks/contacts.scss";
+@import "blocks/social.scss";
+@import "blocks/copyright.scss";
