--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,6 @@
 @import "font-face.scss";
 @import "variables.scss";
+@import "global.scss";
 @import "button.scss";
 @import "blocks/header.scss";
 @import "blocks/page-main.scss";
@@ -9,3 +10,4 @@
 @import "blocks/contacts.scss";
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
+@import "blocks/visually-hidden.scss";
