--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,7 @@
 @import "font-face.scss";
-@import "variables.scss";
 @import "global.scss";
 @import "button.scss";
+
 @import "blocks/header.scss";
 @import "blocks/page-main.scss";
 @import "blocks/advantages.scss";
@@ -11,3 +11,5 @@
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
 @import "blocks/visually-hidden.scss";
+@import "blocks/description.scss";
+@import "blocks/feature.scss";
