--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -1,12 +1,12 @@
 @import "../variables.scss";
 
-.interest__title {
+.description__slogan {
   font-weight: bold;
-  font-size: $title-big-font-size;
+  font-size: $title-font-size;
   line-height: 26px;
 }
 
-.interest__text {
+.description__text {
   font-size: $basic-font-size;
-  line-height: 24px;
+  line-height: 21px;
 }
