Sass главная доработки

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,9 +2,8 @@
 @import "global.scss";
 @import "button.scss";
 
-@import "blocks/header.scss";
 @import "blocks/page-main.scss";
-@import "blocks/advantages.scss";
+@import "blocks/advantages-item";
 @import "blocks/interest.scss";
 @import "blocks/footer.scss";
 @import "blocks/contacts.scss";
@@ -12,4 +11,5 @@
 @import "blocks/copyright.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/description.scss";
-@import "blocks/feature.scss";
+@import "blocks/feature-item";
+@import "blocks/page-header";
