--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,3 +1,5 @@
+@import "../variables.scss";
+
 .header__logo {
   position: absolute;
   left: 50%;
@@ -8,4 +10,3 @@
   width: 100%;
   background-color: $white;
 }
-
