Sass главная доработки

--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -4,7 +4,7 @@ body {
   min-width: 320px;
   margin: 0;
   padding: 0;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: $basic-font-size;
   line-height: $title-big-font-size;
   weight: 700;
