--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,8 +1,8 @@
 //Colors
 $black: #000000;
-$light-blue: #81B3D2;
-$light-grey: #EEEEEE;
-$white: #FFFFFF;
+$light-blue: #81b3d2;
+$light-grey: #eeeeee;
+$white: #ffffff;
 
 //Basic
 $basic-font-family: "PT Sans", "Arial", sans-serif;
