--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,3 +18,6 @@
 @import "blocks/emotion-form.scss";
 @import "blocks/failure-modal.scss";
 @import "blocks/success-modal.scss";
+@import "blocks/photo.scss";
+@import "blocks/video.scss";
+
