--- a/source/sass/blocks/interest.scss
+++ b/source/sass/blocks/interest.scss
@@ -10,3 +10,9 @@
   font-size: $basic-font-size;
   line-height: 24px;
 }
+
+.interest__wrapper {
+  outline: 5px solid rgba(255, 0, 0, 0.8);
+  outline-offset: -5px;
+  text-align: center;
+}
