--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -34,3 +34,10 @@ img {
   margin: 0;
   padding: 0;
 }
+
+.wrapper {
+  @media (min-width: $desktop-width) {
+    width: 1200px;
+    margin: 0 auto;
+  }
+}
