--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,6 @@
 @import "font-face.scss";
 @import "global.scss";
-@import "blocks/page-main.scss";
+@import "blocks/main";
 @import "blocks/advantages-item.scss";
 @import "blocks/interest.scss";
 @import "blocks/contacts.scss";
@@ -9,7 +9,7 @@
 @import "blocks/visually-hidden.scss";
 @import "blocks/description.scss";
 @import "blocks/feature-item";
-@import "blocks/page-header.scss";
+@import "blocks/header";
 @import "blocks/reviews.scss";
 @import "blocks/sign.scss";
 @import "blocks/contacts-info.scss";
@@ -20,4 +20,5 @@
 @import "blocks/success-modal.scss";
 @import "blocks/photo.scss";
 @import "blocks/video.scss";
-
+@import "blocks/footer";
+@import "blocks/filter.scss";
