--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,7 @@ $black: #000000;
 $light-blue: #81b3d2;
 $light-grey: #eeeeee;
 $white: #ffffff;
+$orange: #eaaf6b;
 
 //Basic
 $basic-font-family: "PT Sans", "Arial", sans-serif;
@@ -14,6 +15,6 @@ $title-big-font-size: 21px;
 $title-very-big-font-size: 30px;
 
 //Tablet / Desktop
-$mobile-width: 767px;
+$mobile-width: 767px; // main
 $tablet-width: 768px; // main
 $desktop-width: 1200px; // main
