--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -56,23 +56,15 @@
   }
 }
 
-.page-form-main {
+.page-form {
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-    grid-template-areas: "a a a a" "b b b b" "e e c c" "d d d d" "f f f f" "g g g g";
+    grid-template-areas: "e e c c" "d d d d" "f f f f" "g g g g";
   }
 }
 
-.welcome {
-  grid-area: a;
-}
-
-.reviews {
-  grid-area: b;
-}
-
-.sign__form {
+.sign {
   grid-area: c;
 }
 
