--- a/14/css/style.css
+++ b/14/css/style.css
@@ -89,18 +89,12 @@ img {
     display: none; } }
 
 @media (min-width: 768px) {
-  .page-form-main {
+  .page-form {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-    grid-template-areas: "a a a a" "b b b b" "e e c c" "d d d d" "f f f f" "g g g g"; } }
+    grid-template-areas: "e e c c" "d d d d" "f f f f" "g g g g"; } }
 
-.welcome {
-  grid-area: a; }
-
-.reviews {
-  grid-area: b; }
-
-.sign__form {
+.sign {
   grid-area: c; }
 
 .contacts-info {
